apps/argocd/resources-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-application-controller
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "15m"
              memory: "256Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-applicationset-controller
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
            requests:
              cpu: "5m"
              memory: "32Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-notifications-controller
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
            requests:
              cpu: "5m"
              memory: "32Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis
spec:
  template:
    spec:
      containers:
        - name: redis
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
            requests:
              cpu: "5m"
              memory: "32Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
            requests:
              cpu: "15m"
              memory: "64Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
            requests:
              cpu: "5m"
              memory: "64Mi"
